--- a/devops_bot/.env
+++ b/devops_bot/.env
@@ -1,14 +1,14 @@
-TOKEN=
-RM_HOST=
+TOKEN=7189631590:AAHrL6C8heVt3Nn94mZvOimynlH4T9jxWHY
+RM_HOST=192.168.26.168
 RM_PORT=22
-RM_USER=
-RM_PASSWORD=
+RM_USER=ubuntu
+RM_PASSWORD=ubuntu
 DB_USER=postgres
-DB_PASSWORD=
+DB_PASSWORD=1618
 DB_HOST=10.0.0.3
 DB_PORT=5432
-DB_DATABASE=
+DB_DATABASE=telegram_db
 DB_REPL_USER=repl_user
-DB_REPL_PASSWORD=
+DB_REPL_PASSWORD=1618
 DB_REPL_HOST=10.0.0.4
 DB_REPL_PORT=5433
