--- a/devops_bot/bot/Dockerfile
+++ b/devops_bot/bot/Dockerfile
@@ -1,14 +1,7 @@
-# Используем базовый образ Python
 FROM python:3.9-slim
-
-# Устанавливаем рабочую директорию в контейнере
-WORKDIR /app
-
-# Копируем файлы зависимостей и исходный код в контейнер
+RUN apt-get update && apt-get install -y postgresql-client
+WORKDIR /bot
 COPY requirements.txt .
 COPY bot.py .
-# Устанавливаем зависимости
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Команда для запуска бота
 CMD ["python", "bot.py"]
